--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "clsx": "^2.0.0",
     "lucide-react": "^0.438.0",
+    "md-editor-rt": "^5.4.4",
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
